# zpl-gen-for-library

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/library-tracing-setup/: Cargo.toml
crates/library-tracing-setup/src/: lib.rs
crates/zpl-library-file-sorter/: Cargo.toml
crates/zpl-library-file-sorter/src/: fs.rs  lib.rs  main.rs
crates/zpl-library-file-sorter/src/sorting/: mod.rs  natural.rs
outputs/: Output file 1-2.zpl
src/: check_digit.rs  fs.rs  generator.rs  lib.rs  main.rs  tracing_setup.rs
