lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "library-tracing-setup"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "fmt",
    "std"
] }
tracing.workspace = true
