lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "zpl-library-file-sorter"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
library-tracing-setup.workspace = true
num = "0.4"
once_cell = "1.18"
regex = "1"
tokio-stream = { version = "0.1", features = ["fs"] }
tokio.workspace = true
tracing.workspace = true
